k8s/platform/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: grpc-services
spec:
  mtls:
    mode: STRICT
